08/1/12:
	Added mobile.html
	Added mobile.cgi, lame hack to fix issue
	CGI: Work on mobile support
	Live: Theme font fixes

07/24/12:
	Modified Makefile to ignore all hidden files when building tarball

06/22/12:
	Removed "test" directory, obviously not supposed to be there
	Modified Makefile to exclude git on release

06/18/12: Released as Version 1.0.4

06/15/12:
	Experimental: Adjust scan time based on platform.

06/10/12:	
	PWN/WRT: New error handler. Bluelog will accept up to 5 BlueZ errors.
	CGI: Cleaned up Status pane
	Updates to README.LIVE
	Slight changes to class DB

06/09/12:
	CGI: New Status pane in Live view
	Live: Theme cleanups

06/07/12:
	CGI: Allow version/debug before root user bail out
	Removed README.WRT

06/05/12:
	Added "pwnplug" target to Makefile
	CGI: Theme in-browser error messages
	Live: Fix paths in about/contact
	Live: "parse log file"? What was that supposed to mean?
	Live: Bumped up about/contact font to 12pt

06/01/12:
	WRT: Only WRT theme included in bluelog-live, package shrunk by 24 KB

05/29/12:
	CGI: Added -h option, gives brief info
	CGI: Added -v option, gives module version
	CGI: Added -d option, gives debug into about module configuration

05/21/12:
	WRT: Fix CSS path in CGI

05/21/12:
	CGI: Refuse to run as root. Seems like a good idea.
	CGI: Fixed cgi-bin path
	Live: Removed unused image.

05/18/12:
	Removed start button from Perl and CGI UI, need to figure out fix

05/16/12:
	Initial version of livelog.cgi, a C CGI module for Bluelog Live
	Largely re-written HTML to support CGI module, index.html
	README.LIVE updated with livelog.cgi info
	Added OpenWRT Bluelog Live theme (openwrt.css)

05/15/12:
	Updated livelog.pl, can now create full Live mode HTML
	README.LIVE updated with livelog.pl info
	Fixes to HTML headers in Live

05/14/12: Released as Version 1.0.3
	Switched from "tac" to "sed" in Bluelog Live, WRT compat improvement
	livelog.pl updated, now creates complete Bluelog Live HTML page

05/03/12: